clusters/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: nginx
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ses-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: "www.solenersync.net"
      http:
        paths:
          - pathType: Prefix
            path: "/v1/ses-demo"
            backend:
              service:
                name: ses-demo-service
                port:
                  number: 80
          - pathType: Prefix
            path: "/api/v1/users"
            backend:
              service:
                name: user-store-service
                port:
                  number: 80
  tls:
  - hosts:
    - www.solenersync.net
    secretName: solenersync-cert
